--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,16 @@
 {
     "bulkdata_url_month": "https://ted.europa.eu/packages/monthly/2024-04",
     "bulkdata_url": "https://ted.europa.eu/packages/daily/202400086",
-    "data_directory": "data/",
-    "download_subdir": "/Users/frederic/Downloads/data",
-    "xml_subdir": "xml/",
-    "xml_error_subdir": "xml_error/",
-    "json_subdir": "json/",
-    "json_subdir_error": "json_error/",
+    "download_dir": "/Users/frederic/Downloads/data/download",
+    "xml_dir": "/Users/frederic/Downloads/data/xml",
+    "xml_error_dir": "xml_error/",
+    "json_dir": "/Users/frederic/Downloads/download/data/json",
+    "json_dir_error": "json_error/",
     "extracted_data": "output/",
     "extracted_file": "ted_data.csv",
-    "filter_for_country": "DEU"
+    "filter_for_country": "DEU",
+    "run_step_download": true,
+    "run_step_processxml": true,
+    "run_step_transform": true,
+    "delete_after_processing": false
 }
