implemented lot logic for transform, dynamic CSV separator

--- a/src/config.json
+++ b/src/config.json
@@ -8,16 +8,17 @@
     "extracted_file": "/Users/frederic/Downloads/data/ted_data.csv",
     "filter_for_country": "DEU",
     "run_steps": {
-        "run_step_download": false,
-        "run_step_processxml": false,
+        "run_step_download": true,
+        "run_step_processxml": true,
         "run_step_transform": true
     },
     "delete_after_processing": false,
     "download_period": {
         "from_year": 2024,
-        "from_month": 1,
+        "from_month": 5,
         "to_year": 2024,
-        "to_month": 1
+        "to_month": 5
     },
-    "log_level": "debug"
+    "log_level": "debug",
+    "csv_separator_char": ";"
 }
